--- a/projects/breast-cancer-diagnostic/data/breast_cancer_prediction.Rmd
+++ b/projects/breast-cancer-diagnostic/data/breast_cancer_prediction.Rmd
@@ -689,4 +689,4 @@ invisible(dev.off())
 
 The results show that all three models perform exceptionally well in predicting breast cancer diagnosis, with very high ROC–AUC values indicating strong discriminatory power between benign and malignant cases. **Logistic Regression** and **Random Forest** both achieved an accuracy of **0.965**, demonstrating consistent and reliable classification performance, while the **Support Vector Machine (SVM)** achieved a slightly lower accuracy of **0.894**. Despite this, both the **SVM** and **Random Forest** attained near-perfect ROC–AUC scores of **0.998**, suggesting that these models are extremely effective at ranking malignant cases above benign ones, even if the default classification threshold leads to more misclassifications for the SVM.
 
-Comparatively, **Logistic Regression** provides a strong balance between interpretability and performance, with a high accuracy and an AUC of **0.975**, making it a robust and transparent baseline model. The Random Forest emerges as the strongest overall performer, matching Logistic Regression’s high accuracy while also achieving a near-perfect AUC, indicating excellent generalization and stability. Although the SVM demonstrates superior ranking ability, its lower accuracy suggests sensitivity to threshold selection. Overall, these results indicate that ensemble and margin-based models offer marginal performance gains, while simpler models like
+Comparatively, **Logistic Regression** provides a strong balance between interpretability and performance, with a high accuracy and an AUC of **0.975**, making it a robust and transparent baseline model. The Random Forest emerges as the strongest overall performer, matching Logistic Regression’s high accuracy while also achieving a near-perfect AUC, indicating excellent generalization and stability. Although the SVM demonstrates superior ranking ability, its lower accuracy suggests sensitivity to threshold selection. Overall, these results indicate that ensemble and margin-based models offer marginal performance gains, while simpler models like logistical regression provide a solid baseline of predicting breast cancer.
